# GPTODO

./: .env.example  .gitignore  README.md  pyproject.toml
app/: dateresolve.py  db.py  gcal.py  icalfeed.py  main.py  menu.py  models.py  profile.py  recurrence.py  store.py  sync.py  timeutil.py  views.py
app/llm/: __init__.py  client.py  codex_oauth.py  extract.py
app/prompts/: organizer.md
app/static/: app.js  style.css
app/templates/: index.html
tests/: test_core.py
