[project]
name = "llm-to-do"
version = "0.1.0"
description = "아무렇게나 적어도 캘린더 중심으로 정리해주는 채팅 웹앱 (Codex/GPT OAuth 백엔드)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "jinja2>=3.1",
    "openai>=1.40",
    "pydantic>=2.7",
    "tzdata>=2024.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
